--- a/public/ind.css
+++ b/public/ind.css
@@ -1,5 +1,5 @@
 
-#loader {
+/*#loader {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -24,7 +24,7 @@
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
-}
+}*/
 
 /* Add animation to "page content" */
 .animate-bottom {
