--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   background: url("./images/back1.jpg");
 
   /* Full height */
+  width : 100%;
   height: 100vh; 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
@@ -96,12 +97,31 @@
    padding:  0.5%;
    text-align: center;
 }
-
+@media only screen and (max-device-width: 1366px) {
+  .parallax {
+    background-attachment: scroll;
+  }
+}
 @media only screen and (max-width: 580px) {
   .also{
     display: inline-block;
   }
   .also-li{
     margin-right: 0;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .intro{
+    padding-top: 50%;
+  }
+}
+@media only screen and (max-width: 380px) {
+  .intro{
+    padding-top: 70%;
+  }
+}
+@media only screen and (max-width: 310px) {
+  .star{
+    color: #343a40 ;
   }
 }
