--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,6 +1,6 @@
 .skills{
 	width: 100%;
-    max-width: 85% !important;
+   /* max-width: 85% !important;*/
     padding-top: 4%;
     padding-bottom: 5%;
 }
@@ -50,6 +50,12 @@ svg{
   .col-custm{
     padding-left: 25% !important;
     padding-right: 25% !important;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .col-sk{
+    padding-left: 10% !important;
+    padding-right: 10% !important;
   }
 }
 @media only screen and (max-width: 345px) {
