--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -67,3 +67,9 @@ svg{
     left: 33%;
   }
 }
+@media only screen and (max-width: 290px) {
+  .col-sk{
+    padding-left: 2% !important ;
+    padding-right: 2% !important ;
+  }
+}
